# claude-ralph-clara-care-adk

./: .gitignore  CLAUDE.md  README.md  claude-ralph.sh  prd.json.example  prompt.md
apps/clara-care/: .env.example  README.md  pyproject.toml
apps/clara-care/clara_care/: __init__.py  agent.py  config.py  supabase_client.py
apps/clara-care/clara_care/sub_agents/: __init__.py
apps/clara-care/clara_care/sub_agents/db_search_agent/: __init__.py  agent.py
apps/clara-care/clara_care/sub_agents/judge_agent/: __init__.py  agent.py
apps/clara-care/clara_care/sub_agents/search_judge_pipeline/: __init__.py  agent.py
apps/clara-care/clara_care/sub_agents/search_pipeline/: __init__.py  agent.py
apps/clara-care/clara_care/sub_agents/web_search_agent/: __init__.py  agent.py
apps/clara-care/clara_care/sub_agents/writer_agent/: __init__.py  agent.py
apps/clara-care/clara_care/tools/: __init__.py  claim_status.py  db_search.py  email_validator.py  web_search.py
apps/clara-care/scripts/: __init__.py  deploy_to_agent_engine.py
apps/clara-care/tests/: __init__.py  conftest.py
apps/clara-care/tests/integration/: __init__.py  test_workflow.py
apps/clara-care/tests/unit/: __init__.py  test_tools.py
skills/adk-deployment/: SKILL.md
skills/adk-llm-agent/: SKILL.md
skills/adk-loop-agent/: SKILL.md
skills/adk-multi-agent-orchestrator/: SKILL.md
skills/adk-parallel-agent/: SKILL.md
skills/adk-receipt-query-agent/: SKILL.md
skills/adk-sequential-agent/: SKILL.md
skills/adk-sessions/: SKILL.md
skills/prd/: SKILL.md
tasks/: prd-clara-care-warranty-agent.md
(+4 files in other folders)
